--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
        <button class="call-button">Sign up</button>
       </div>
 
-      <!--<div class="end">Copyright @ The Odin Project 2021</div>!-->
+      <footer>Copyright @ The Odin Project 2021</footer>
 
     </div>
 
