added height on the body to remove blank space at the bottom

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
        <div class="customer">-Hayley and Hiraya, savage 7yo/1yo</div>
       </div>
 
+      <div class="call-container"></div>
+
       <div class="call-to-action">
 
        <div class="call-left"> 
