Images on the live preview are broken I deleted the .. in the beggining of the src. Let's see if it will work.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button class="sign-up">Sign up</button>
        </div>
 
-        <img class="pancake" src="../images/pancake.png" alt="pancakes">
+        <img class="pancake" src="/images/pancake.png" alt="pancakes">
 
       </div>
 
