I was able to confirm that tha relative path is the problem. Removing '../' from all the img path

--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
 
        <div class="imgs">  
          <div class="info"> 
-          <img src="../images/flour.png" alt="flour">
+          <img src="images/flour.png" alt="flour">
           <div class="text">The base of our pancake. Can be all-purpose,wheat or whatever flour you have.</div>
          </div>
 
          <div class="info"> 
-          <img src="../images/egg.png" alt="egg">
+          <img src="images/egg.png" alt="egg">
           <div class="text">Binds all of the ingredients together and makes the pancakes rich and fluffy.</div>
          </div>
       
          <div class="info"> 
-          <img src="../images/butter.png" alt="butter">
+          <img src="images/butter.png" alt="butter">
           <div class="text">Butter in the batter or as a topping? We love 'em on both!</div>
          </div>
              
          <div class="info"> 
-          <img src="../images/sugar.png" alt="sugar">
+          <img src="images/sugar.png" alt="sugar">
           <div class="text">Minimize this if you don't like it sweet. But the magic of sugar is a game changer.</div>
          </div>
        </div>
